fix header clipping, combiones 875 zand 905 medias into 905

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 875px) {
+@media only screen and (min-width: 905px) {
   .heading-image img {
     object-position: 0;
   }
